--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         }
         #app-container {
             width: 100vw;
-            height: 100vh; /* Test thoroughly on iOS with dynamic toolbars */
+            height: 100dvh;; /* Test thoroughly on iOS with dynamic toolbars */
             background-color: var(--content-background);
             display: flex;
             flex-direction: column;
