--- a/index.html
+++ b/index.html
@@ -936,6 +936,7 @@
             let penguinScene, penguinCamera, penguinRenderer, penguinOrbitControls, penguinMixer;
             let penguinSceneInitialized = false;
             const penguinClock = new THREE.Clock(); // For animation timing
+            let snowParticles, snowMaterial; // For snow effect
 
             function initPenguinView() {
                 if (penguinSceneInitialized || !penguinCanvas) {
@@ -985,6 +986,36 @@
                     penguinOrbitControls.maxDistance = 15; // Increased max distance
                     penguinOrbitControls.maxPolarAngle = Math.PI / 2 - 0.05; 
                     penguinOrbitControls.update();
+
+                    // Create Snow
+                    const snowGeometry = new THREE.BufferGeometry();
+                    const snowCount = 15000;
+                    const positions = new Float32Array(snowCount * 3);
+                    const velocities = new Float32Array(snowCount); // Store y-velocity for each snowflake
+
+                    for (let i = 0; i < snowCount; i++) {
+                        positions[i * 3 + 0] = (Math.random() - 0.5) * 20; // x spread
+                        positions[i * 3 + 1] = Math.random() * 15;         // y initial position (above scene)
+                        positions[i * 3 + 2] = (Math.random() - 0.5) * 20; // z spread
+                        velocities[i] = 0.02 + Math.random() * 0.03; // Random falling speed
+                    }
+                    snowGeometry.setAttribute('position', new THREE.BufferAttribute(positions, 3));
+                    snowGeometry.setAttribute('velocity', new THREE.BufferAttribute(velocities, 1));
+
+
+                    // Snow Material - using a small white point
+                    snowMaterial = new THREE.PointsMaterial({
+                        color: 0xffffff,
+                        size: 0.05, // Adjust size for "realism"
+                        transparent: true,
+                        opacity: 0.8,
+                        blending: THREE.AdditiveBlending, // Brighter where flakes overlap
+                        depthWrite: false // Avoid issues with transparency
+                    });
+
+                    snowParticles = new THREE.Points(snowGeometry, snowMaterial);
+                    penguinScene.add(snowParticles);
+
 
                     const loader = new GLTFLoader();
                     // Switched to African Penguin model
@@ -1043,6 +1074,37 @@
                 if (penguinMixer) {
                     penguinMixer.update(deltaTime);
                 }
+
+                // Animate Snow
+                if (snowParticles) {
+                    const positions = snowParticles.geometry.attributes.position.array;
+                    const velocities = snowParticles.geometry.attributes.velocity.array;
+                    const snowCount = positions.length / 3;
+
+                    for (let i = 0; i < snowCount; i++) {
+                        positions[i * 3 + 1] -= velocities[i]; // Fall down based on individual velocity
+
+                        // Add some horizontal drift (subtle wind effect)
+                        positions[i * 3 + 0] += (Math.random() - 0.5) * 0.01; 
+                        positions[i * 3 + 2] += (Math.random() - 0.5) * 0.01;
+
+                        // Reset snowflake if it falls below the ground or drifts too far
+                        if (positions[i * 3 + 1] < -2) { // Reset slightly below ground
+                            positions[i * 3 + 1] = 10 + Math.random() * 5; // Reset to top, varied height
+                            positions[i * 3 + 0] = (Math.random() - 0.5) * 20; // Reset x position
+                            positions[i * 3 + 2] = (Math.random() - 0.5) * 20; // Reset z position
+                        }
+                         // Keep flakes within a horizontal boundary
+                        if (positions[i * 3 + 0] > 10 || positions[i * 3 + 0] < -10) {
+                            positions[i * 3 + 0] = (Math.random() - 0.5) * 20;
+                        }
+                        if (positions[i * 3 + 2] > 10 || positions[i * 3 + 2] < -10) {
+                             positions[i * 3 + 2] = (Math.random() - 0.5) * 20;
+                        }
+                    }
+                    snowParticles.geometry.attributes.position.needsUpdate = true;
+                }
+
 
                 if (penguinCanvas && penguinRenderer && penguinCamera &&
                     (penguinCanvas.clientWidth !== penguinRenderer.domElement.width ||
