--- a/index.html
+++ b/index.html
@@ -231,10 +231,10 @@
         #delete-item-btn { background-color: var(--destructive-color) !important; color: white !important; border-color: var(--destructive-color) !important; }
         #delete-item-btn:hover { background-color: #D93025 !important; }
 
-        /* 3D Parrot Tamagotchi Specific Styles */
-        #parrot-view { position: relative; width: 100%; height: 100%; overflow: hidden; padding: 0; background-color: #add8e6; /* Light blue, matching JS */ }
-        #parrot-canvas { display: block; width: 100%; height: 100%; }
-        /* Note: #parrot-loading-indicator styles are mostly inline in HTML for simplicity here */
+        /* 3D Penguin Tamagotchi Specific Styles */
+        #penguin-view { position: relative; width: 100%; height: 100%; overflow: hidden; padding: 0; background-color: #add8e6; /* Light blue, matching JS */ }
+        #penguin-canvas { display: block; width: 100%; height: 100%; }
+        /* Note: #penguin-loading-indicator styles are mostly inline in HTML for simplicity here */
 
         /* Video Call Overlay */
         #video-call-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.95); z-index: 900; display: none; flex-direction: column; align-items: center; justify-content: center; padding: 20px; color: white; }
